<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:backgroundTint="#000000" android:background="#000000"
        tools:ignore="ExtraText">
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline" app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.75"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.40218878"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.55"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline7"
            app:layout_constraintGuide_percent="0.7"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline8"
            app:layout_constraintGuide_percent="0.85"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/borrarButton"
            android:textSize="40sp" android:backgroundTint="#96979A"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/borrarButton"
            android:textColor="#FFFFFF" android:onClick="borrarAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/dividirButton"
            android:textSize="40sp"
            android:backgroundTint="#FF9800"
            app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/dividirButton" android:textColor="#FFFFFF" android:onClick="operacionAction"/>/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/nueveButton"
            android:textSize="40sp" android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/nueveButton"
            android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/multiplicarButton"
            android:textSize="40sp"
            android:backgroundTint="#FF9800"
            app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/multiplicarButton"
            android:textColor="#FFFFFF" android:onClick="operacionAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/seisButton"
            android:textSize="40sp"
            android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/seisButton" android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/tresButton"
            android:textSize="40sp"
            android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/tresButton"
            android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/restarButton"
            android:textSize="40sp"
            android:backgroundTint="#FF9800"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/restarButton"
            android:textColor="#FFFFFF" android:onClick="operacionAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/sumarButton"
            android:textSize="40sp" android:backgroundTint="#FF9800"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/sumarButton"
            android:textColor="#FFFFFF" android:onClick="operacionAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/igualButton"
            android:textSize="40sp" android:backgroundTint="#FF9800"
            app:layout_constraintTop_toTopOf="@+id/guideline8" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/igualButton" android:textColor="#FFFFFF" android:onClick="igualAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/ceroButton"
            android:textSize="40sp" android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline8" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/ceroButton" android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/sieteButton"
            android:textSize="40sp" android:backgroundTint="#626465"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintBottom_toTopOf="@+id/guideline6"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/sieteButton" android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/cuatroButton"
            android:textSize="40sp" android:backgroundTint="#626465"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/cuatroButton" android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/unoButton"
            android:textSize="40sp"
            android:backgroundTint="#626465" android:shadowColor="#000000"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline8"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/unoButton" android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/ochoButton"
            android:textSize="40sp"
            android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/ochoButton"
            android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/cincoButton"
            android:textSize="40sp"
            android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:text="@string/cincoButton" android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/dosButton"
            android:textSize="40sp" android:backgroundTint="#626465"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" android:text="@string/dosButton"
            android:textColor="#FFFFFF" android:onClick="numberAction"/>
    <Button
            android:text="@string/puntoButton"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/puntoButton"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
            android:backgroundTint="#626465" android:textColor="#FFFFFF" android:textSize="40sp" android:onClick="numberAction"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="81dp" android:id="@+id/guideline9"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/resultadoTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintTop_toTopOf="@+id/guideline9"
            android:textSize="40sp" android:textColor="#FFFFFF" android:gravity="center"
            android:textAlignment="textEnd" tools:ignore="RtlCompat"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/operacionesTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline9" app:layout_constraintTop_toTopOf="parent"
            android:textColor="#FFFFFF" android:textSize="30sp" android:textAlignment="textEnd"
            android:gravity="center" tools:ignore="RtlCompat"/>

</android.support.constraint.ConstraintLayout>